# pycewise

./: .gitattributes  .gitignore  .travis.yml  Pipfile  README.md  advanced_features.ipynb  bugs.ipynb  demo.ipynb  gradient_perf-eval.ipynb  log_data.ipynb  pyproject.toml  pytree.py  real_data.ipynb  setup.py  test.py
.github/workflows/: main.yml
notebooks/: advanced_features.ipynb  demo.ipynb  gradient_perf-eval.ipynb  log_data.ipynb  real_data.ipynb  regressions_comparison.ipynb
pycewise/: reg.py
pytree/: __init__.py  reg.py
test_data/: memcpy_small.csv  pingpong_loopback.csv  pingpong_loopback_small.csv  pingpong_remote.csv  pingpong_remote_small.csv  ringrong_loopback.csv  ringrong_loopback_small.csv  ringrong_remote.csv  ringrong_remote_small.csv
