[tool.poetry]
name = "pytree"
version = "0.1.0"
description = ""
authors = ["Tom Cornebize <tom.cornebize@univ-grenoble-alpes.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.18.1"
jupyterlab = "^2.2.6"
numpy = "^1.19.1"
matplotlib = "^3.3.1"
graphviz = "^0.14.1"
mock = "^4.0.2"
pandas = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
